CORE-6439: Fix search card input shifting up and restyle

--- a/app/styles/dataCards/card.sass
+++ b/app/styles/dataCards/card.sass
@@ -249,8 +249,9 @@ div[ng-switch="cardType"]
     width: 100%
     box-sizing: border-box
     display: block
-    padding: $card-input-vertical-padding 1rem $card-input-vertical-padding 6px
-    margin-top: 5px
+    padding: 0 2px
+    font-size: 0.8rem
+    line-height: 35px
 
 .card-example-text
   .one-line
