--- a/app/styles/dataCards/theme/default.sass
+++ b/app/styles/dataCards/theme/default.sass
@@ -324,9 +324,12 @@ $card-control-color: #888
 $card-control-hover-color: #ccc
 $card-control-hover-settings-color: $blue-active-color
 $card-control-hover-close-color: #f00
-$card-form-group-form-control-text-color: #555
+$card-form-group-form-control-text-color: #999
+$card-form-group-form-control-focused-text-color: #666
 $card-form-group-form-control-background-color: #fff
-$card-form-group-form-control-border-color: rgba(#000, 0.5)
+$card-form-group-form-control-border-color: #bbb
+$card-form-group-form-control-clear-trigger-color: #999
+$card-form-group-form-control-clear-trigger-hover-color: #ccc
 $card-subtitle-text-color: #bbb
 
 // customize-bar
